--- a/index.html
+++ b/index.html
@@ -105,13 +105,14 @@
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
   
               <div class="card-body">
-                <p class="card-text">準備中</p>
+                <img class="card-img-top" src="../imag/steven.png" alt="Card image cap">
+                <p class="card-text">スティーブン・ジャン</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">見る</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" a href="../imag/steven.png">見る</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
                   </div>
-                  <small class="text-muted">9分</small>
+                  <small class="text-muted">イラスト1</small>
                 </div>
               </div>
             </div>
@@ -121,13 +122,13 @@
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
   
               <div class="card-body">
-                <p class="card-text">準備中</p>
+                <p class="card-text">郎朗</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">見る</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
                   </div>
-                  <small class="text-muted">9分</small>
+                  <small class="text-muted">イラスト2</small>
                 </div>
               </div>
             </div>
