--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
   
               <div class="card-body">
-                <img class="card-img-top" src="../imag/steven.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/steven.png" alt="Card image cap">
                 <p class="card-text">スティーブン・ジャン</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" a href="../imag/steven.png">見る</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" a href="../img/steven.png">見る</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
                   </div>
                   <small class="text-muted">イラスト1</small>
