--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p class="card-text">スティーブン・ジャン</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='https://makik-0-iwata.github.io/Portfolio/img/steven.pn'">見る</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='https://makik-0-iwata.github.io/Portfolio/img/steven.png'">見る</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
                   </div>
                   <small class="text-muted">イラスト1</small>
