--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='https://makik-0-iwata.github.io/Portfolio/img/steven.png'">見る</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
                   </div>
                   <small class="text-muted">イラスト1</small>
                 </div>
@@ -124,8 +123,7 @@
                 <p class="card-text">郎朗</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">見る</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='https://makik-0-iwata.github.io/Portfolio/img/LangLang.png'">見る</button>
                   </div>
                   <small class="text-muted">イラスト2</small>
                 </div>
