--- a/index.html
+++ b/index.html
@@ -74,9 +74,18 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
           <strong>　</strong>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+       　<div class="dropdown">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+  　　　　　  <li><a class="dropdown-item active" href="#">Action</a></li>
+   　　　　　 <li><a class="dropdown-item" href="#">Another action</a></li>
+   　　　　　 <li><a class="dropdown-item" href="#">Something else here</a></li>
+   　　　　　 <li><hr class="dropdown-divider"></li>
+    　　　　　<li><a class="dropdown-item" href="#">Separated link</a></li>
+ 　　　　　 </ul>
+        　</div>
       </div>
     </div>
   </header>
