--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
   <footer class="text-muted py-5">
     <div class="container">
       <p class="float-end mb-1">
+        <a href="#">トップに戻る</a>
       </p>
+      <p class="mb-1"> &copy; MAKIKO IWATA</p>
     </div>
   </footer>
 
