--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta property="og:image" content="">
 
   <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/album/">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
+
 
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -170,7 +172,13 @@
       <p class="mb-1"> &copy; MAKIKO IWATA</p>
     </div>
   </footer>
-
+　
+  　<!-- トップへ戻るボタン　-->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+　　<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
+　　<div id="page_top"><a href="#"></a></div>
+    <!-- ここまで　-->
+  
   <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
